--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,20 @@
-backcall==0.1.0
-certifi==2018.4.16
-chardet==3.0.4
-decorator==4.3.0
-Django==2.0.8
-django-widget-tweaks==1.4.2
-idna==2.7
-ipdb==0.11
-ipython==6.5.0
-ipython-genutils==0.2.0
-jedi==0.12.1
-parso==0.3.1
-pexpect==4.6.0
-pickleshare==0.7.4
-Pillow==5.2.0
-prompt-toolkit==1.0.15
-ptyprocess==0.6.0
-Pygments==2.2.0
+asn1crypto==0.24.0
+cryptography==2.1.4
+dj-database-url==0.5.0
+Django==1.11.15
+django-heroku==0.3.1
+enum34==1.1.6
+gunicorn==19.9.0
+idna==2.6
+ipaddress==1.0.17
+keyring==10.6.0
+keyrings.alt==3.0
+psycopg2==2.7.5
+pycrypto==2.6.1
+pygobject==3.26.1
 pytz==2018.5
-requests==2.19.1
-simplegeneric==0.8.1
+pyxdg==0.25
+SecretStorage==2.3.1
 six==1.11.0
-traitlets==4.3.2
-urllib3==1.23
-wcwidth==0.1.7
+virtualenv==16.0.0
+whitenoise==3.3.1
