--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cryptography==2.1.4
 dj-database-url==0.5.0
 Django==1.11.15
 django-heroku==0.3.1
+django-widget-tweaks==1.4.2
 enum34==1.1.6
 gunicorn==19.9.0
 idna==2.6
