--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asn1crypto==0.24.0
+certifi==2018.4.16
+chardet==3.0.4
 cryptography==2.1.4
 dj-database-url==0.5.0
-Django==2.1
+Django==1.11.15
 django-heroku==0.3.1
 django-widget-tweaks==1.4.2
 enum34==1.1.6
@@ -14,7 +16,9 @@ psycopg2==2.7.5
 pycrypto==2.6.1
 pytz==2018.5
 pyxdg==0.25
+requests==2.19.1
 SecretStorage==2.3.1
 six==1.11.0
+urllib3==1.23
 virtualenv==16.0.0
 whitenoise==3.3.1
